[metadata]
name = siganalogies
version = 0.0.1
author = Esteban Marquer
author_email = esteban.marquer@loria.fr
description = A package to manipulate morphological analogies built upon Sigmorphon 2016 and Sigmorphon 2019 in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EMarquer/siganalogies
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires = torch>=1.8.2

[options.packages.find]
where = .